<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Caravana</string>
    <string name="email">Email</string>
    <string name="Senha">Senha</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="nome">nome</string>
    <string name="voltar">Voltar</string>
    <string name="esqueci_minha_senha">Esqueci minha Senha</string>
    <string name="recuperar">Insira seu E-mail para recuperar sua conta.</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_maps">Map</string>
    <string name="sair">SAIR</string>
    <string name="textview">TextView</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc"> Navigation header</string>
    <string name="action_settings"> Settings</string>
    <string name="feed_de_eventos"> Feed de Eventos</string>
    <string name="facebook_app_id">712210635810492</string>
    <string name="fb_login_protocol_scheme">fb712210635810492</string>
    <string name="facebook_client_token">434f5f82d28b81e21f1cbbc5493fed22</string>
    <string name="Sair"> Sair</string>
    <string name="title_activity_feedevent"> FeedeventActivity</string>
    <string name="title_activity_cadastroevento"> CadastroeventoActivity</string>
    <string name="cadastrar_evento"> Cadastrar Evento</string>
    <string name="nome_do_evento"> Nome do Evento</string>
    <string name="tipo_de_evento"> Tipo de Evento</string>
    <string name="data_do_evento"> Data do Evento</string>
    <string name="date_event"> DD.MM.AAAA</string>
    <string name="atracao_principal" tools:ignore="ExtraTranslation"> Atração Principal</string>
    <string name="cadastrar"> Cadastrar</string>
    <string name="cancelar"> Cancelar</string>
    <string name="descri_o_do_evento"> Descrição do evento</string>
    <string name="passageiro"> Passageiro</string>
    <string name="motorista"> Motorista</string>
    <string name="selecione_o_seu_tipo_de_usu_rio"> Selecione o seu tipo de usuário:</string>
    <string name="placa_do_veiculo"> Placa do Veiculo</string>
    <string name="veiculo"> Veiculo</string>
    <string name="vagas_do_veiculo"> Vagas do Veiculo</string>
    <string name="nomeMotorista"> Nome</string>
    <string name="idade"> Idade</string>
    <string name="Login">Login</string>
    <string name="nomee"> Nome</string>


</resources>
