<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CadastroeventoActivity"
    tools:showIn="@layout/cadastroevento">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nome_do_evento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNomeEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nome_do_evento"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="@string/nome_do_evento"
        tools:ignore="LabelFor,UnusedAttribute" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tipo_de_evento"
        app:layout_constraintEnd_toEndOf="@+id/txtNomeEvento"
        app:layout_constraintStart_toStartOf="@+id/txtNomeEvento"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeEvento" />

    <EditText
        android:id="@+id/txtTipoEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/tipo_de_evento"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Autofill,LabelFor" />

    <EditText
        android:id="@+id/txtDataEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_event"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/data_do_evento"
        app:layout_constraintEnd_toEndOf="@+id/txtTipoEvento"
        app:layout_constraintStart_toStartOf="@+id/txtTipoEvento"
        app:layout_constraintTop_toBottomOf="@+id/txtTipoEvento" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/atracao_principal"
        app:layout_constraintEnd_toEndOf="@+id/txtDataEvento"
        app:layout_constraintStart_toStartOf="@+id/txtDataEvento"
        app:layout_constraintTop_toBottomOf="@+id/txtDataEvento" />

    <EditText
        android:id="@+id/txtAtracaoPrincipal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/atracao_principal"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:autofillHints="@string/atracao_principal"
        tools:ignore="UnusedAttribute" />
</android.support.constraint.ConstraintLayout>